BIO-157 fix(frontend): fix `mat-select` overflow
Apply `mat-form-field` `width` reset only for text fields.

--- a/frontend/src/styles/overrides/_mat-form-field.sass
+++ b/frontend/src/styles/overrides/_mat-form-field.sass
@@ -69,7 +69,7 @@ mat-form-field
   align-items: center
   min-height: map.get($mat-mdc-form-field, infix, height)
 
-  @at-root div#{&}
+  .mat-mdc-form-field-type-mat-input &
     width: unset
 
   @at-root .mat-mdc-text-field-wrapper.mdc-text-field--outlined &
